--- a/SpecFlowDocCreator/SpecFlowDocCreator.csproj
+++ b/SpecFlowDocCreator/SpecFlowDocCreator.csproj
@@ -38,6 +38,9 @@
     <Reference Include="NConsoler">
       <HintPath>..\packages\NConsoler.2.0.0.0\lib\NConsoler.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json.Net35">
+      <HintPath>..\lib\Newtonsoft.Json.Net35.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -45,20 +48,21 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="TechTalk.SpecFlow">
-      <HintPath>..\lib\TechTalk.SpecFlow.dll</HintPath>
+    <Reference Include="TechTalk.SpecFlow, Version=1.7.0.0, Culture=neutral, PublicKeyToken=0778194805d6db41, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\SpecFlow.1.7.0\lib\net35\TechTalk.SpecFlow.dll</HintPath>
     </Reference>
-    <Reference Include="TechTalk.SpecFlow.Generator">
+    <Reference Include="TechTalk.SpecFlow.Generator, Version=1.6.1.0, Culture=neutral, PublicKeyToken=0778194805d6db41, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\lib\TechTalk.SpecFlow.Generator.dll</HintPath>
     </Reference>
-    <Reference Include="TechTalk.SpecFlow.Parser">
+    <Reference Include="TechTalk.SpecFlow.Parser, Version=1.6.1.0, Culture=neutral, PublicKeyToken=0778194805d6db41, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\lib\TechTalk.SpecFlow.Parser.dll</HintPath>
     </Reference>
-    <Reference Include="TechTalk.SpecFlow.Reporting">
+    <Reference Include="TechTalk.SpecFlow.Reporting, Version=1.6.1.0, Culture=neutral, PublicKeyToken=0778194805d6db41, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\lib\TechTalk.SpecFlow.Reporting.dll</HintPath>
-    </Reference>
-    <Reference Include="TechTalk.SpecFlow.Utils">
-      <HintPath>..\lib\TechTalk.SpecFlow.Utils.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -66,10 +70,10 @@
     <Compile Include="FeatureDocCreator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\FeatureFileQueryService.cs" />
-    <Compile Include="Services\IFeatureFileQueryService.cs" />
-    <Compile Include="ViewModels\Feature.cs" />
-    <Compile Include="ViewModels\FeatureFolder.cs" />
+    <Compile Include="Services\FeatureVmFileListFactory.cs" />
+    <Compile Include="Services\IFeatureVMFileListFactory.cs" />
+    <Compile Include="ViewModels\FeatureVM.cs" />
+    <Compile Include="ViewModels\ScenarioVM.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
