--- a/Tests/packages.config
+++ b/Tests/packages.config
@@ -3,4 +3,5 @@
   <package id="ShouldFluent" version="1.1.12.0" />
   <package id="NUnit" version="2.5.10.11092" />
   <package id="NConsoler" version="2.0.0.0" />
+  <package id="SpecFlow" version="1.7.0" />
 </packages>
