--- a/SpecFlowDocCreator/SpecFlowDocCreator.csproj
+++ b/SpecFlowDocCreator/SpecFlowDocCreator.csproj
@@ -90,13 +90,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="FeatureDocCreator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\FeatureVmFileListFactory.cs" />
-    <Compile Include="Services\IFeatureVMFileListFactory.cs" />
     <Compile Include="Services\ISpecFlowReportGenerator.cs" />
+    <Compile Include="Services\NUnit\INUnitReportParser.cs" />
+    <Compile Include="Services\NUnit\NUnitReportParser.cs" />
+    <Compile Include="Services\NUnit\NUnitTestCaseDto.cs" />
+    <Compile Include="Services\NUnit\NUnitTestResultDto.cs" />
+    <Compile Include="Services\NUnit\NUnitTestSuiteDto.cs" />
     <Compile Include="Services\SpecFlowReportGenerator.cs" />
     <Compile Include="ViewModels\FeatureVm.cs" />
     <Compile Include="ViewModels\ScenarioVm.cs" />
