--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -89,10 +89,9 @@
     <Reference Include="TechTalk.SpecFlow.Parser, Version=1.6.1.0, Culture=neutral, PublicKeyToken=0778194805d6db41, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FeatureVMListFactory_MultipleFilesTests.cs" />
-    <Compile Include="FeatureVMListFactoryTests.cs" />
-    <Compile Include="FeatureVMListFactory_SingleFileTests.cs" />
     <Compile Include="NConsolerTests.cs" />
+    <Compile Include="NUnitReportReaderTests.cs" />
+    <Compile Include="NUnitTestSuiteDtoTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpecFlowFeatureReportTests.cs" />
     <Compile Include="TestConstants.cs" />
@@ -270,7 +269,9 @@
       <Name>SpecFlowDocCreator</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="TestData\NUnitReport\TestResult.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
