--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,4 +3,5 @@
   <repository path="..\SpecFlowDocCreator\packages.config" />
   <repository path="..\Specs\packages.config" />
   <repository path="..\Tests\packages.config" />
+  <repository path="..\TestData.Specs\packages.config" />
 </repositories>
