--- a/SpecFlowDocCreator/packages.config
+++ b/SpecFlowDocCreator/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="NConsoler" version="2.0.0.0" />
   <package id="SpecFlow" version="1.7.0" />
+  <package id="Newtonsoft.Json" version="4.0.2" />
 </packages>
