--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -62,6 +62,9 @@
     <Reference Include="Newtonsoft.Json.Net35">
       <HintPath>..\lib\Newtonsoft.Json.Net35.dll</HintPath>
     </Reference>
+    <Reference Include="NSubstitute">
+      <HintPath>..\packages\NSubstitute.1.1.0.0\lib\35\NSubstitute.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=2.5.10.11092, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\NUnit.2.5.10.11092\lib\nunit.framework.dll</HintPath>
