--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpecFlowFeatureReportTests.cs" />
     <Compile Include="TestConstants.cs" />
+    <Compile Include="ViewModelCreatorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
